[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/enemy_diamond/enemy_diamond.gd" type="Script" id=1]
[ext_resource path="res://addons/regular_polygon2d_node/RegularPolygon2D.gd" type="Script" id=2]
[ext_resource path="res://libs/gt_topdown_entity_mover_2d/gt_topdown_entity_mover_2d.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[node name="enemy_diamond" type="Area2D" groups=[
"enemy",
"enemy_diamond",
]]
collision_layer = 16
collision_mask = 16
script = ExtResource( 1 )
collidable_groups = [ "player" ]

[node name="EntityMover" type="Node" parent="."]
script = ExtResource( 3 )
body_path = NodePath("..")

[node name="graphics" type="Node2D" parent="."]
scale = Vector2( 1, 1.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
centered = true
num_sides = 4
size = 32.0
border_size = 8.0
border_color = Color( 1, 0, 0.301961, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InvertDirectionTimer" type="Timer" parent="."]

[connection signal="timeout" from="InvertDirectionTimer" to="." method="invert_direction"]
